@@ -147,6 +147,7 @@
 * Datatrans: Include additional scrub on store call [naashton] #5447
 * Decidir and DecicirPlus: Add the discover payment method ID [yunnydang] #5448
 * CyberSource: Add the optional merchant reference code on capture [yunnydang] #5453
+* Orbital: Update authorization string [almalee24] #5458
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
